       DT[.(1), list(b,...)]    # correct result again (joining just to a not b but using b)

  o  setkey works again when a non-key column is type list (e.g. each cell can itself be a
     vector), #5366. Test added. Thanks to James Sams, Michael Nelson and Musx for the
     reproducible examples.
       http://stackoverflow.com/questions/22186798/r-data-table-1-9-2-issue-on-setkey

  o  data.table(list()), data.table(data.table()) and data.table(data.frame()) now return
     a null data.table (no columns) rather than one empty column, #5377. Test added. 
     Thanks to Shubh Bansal for reporting.

  o  unique(NULL data.table) returns a null data.table, #5405. Thanks to agstudy for reporting.

  o  data.table(.) converted POSIXlt to POSIXct, consistent with base:::data.frame(.), but now
     also provides a helpful warning instead of coercing silently, #5321.
     Thanks to Brodie Gaslam, Patrick and Ragy Isaac for reporting.
       http://stackoverflow.com/questions/21487614/error-creating-r-data-table-with-date-time-posixlt
       http://stackoverflow.com/questions/21320215/converting-from-data-frame-to-data-table-i-get-an-error-with-head

  o  If another class inherits from data.table; e.g. class(DT) == c("UserClass","data.table","data.frame") then
     DT[...] now retains UserClass in the result. Thanks to Daniel Krizian for reporting, #5296. Test added.

  o  An error "object '<name>' not found" could occur in some circumstances, particularly after a previous error.
     Reported with non-ASCII characters in a column name, a red herring we hope since non-ASCII characters are
     fully supported in data.table including in column names. Fix implemented and tests added.
       http://stackoverflow.com/questions/22128047/how-to-avoid-weird-umlaute-error-when-using-data-table

  o  Column order was reversed in certain cases with as.data.table.table(.). This is now fixed. Closes #5408.
     Thanks to Benjamin Barnes for reporting.
     